@@ -11,7 +11,6 @@ import proyecto.model.*;
 import proyecto.repository.*;
 import proyecto.request_response.FormularioResponse;
 import proyecto.request_response.GrillaResponse;
-import proyecto.request_response.SectorAgrupado;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -32,10 +31,11 @@ public class FormularioService {
     private final SectorRepository sectorRepo;
 
     public FormularioService(FormularioRepository formularioRepo, GrillaRepository grillaRepo,
-                             ActividadRepository actividadRepo, AspectoAmbientalRepository aspectoRepo,
-                             ImpactoAmbientalRepository impactoRepo, TipoImpactoRepository tipoImpactoRepo,
-                             CondicionImpactoRepository condicionRepo, ImpactoSignificadoRepository impactoSignificadoRepo,
-                             RequisitoLegalAsociadoRepository reqLegalAsocRepo, UsuarioRepository usuarioRepo, SectorRepository sectorRepo) {
+            ActividadRepository actividadRepo, AspectoAmbientalRepository aspectoRepo,
+            ImpactoAmbientalRepository impactoRepo, TipoImpactoRepository tipoImpactoRepo,
+            CondicionImpactoRepository condicionRepo, ImpactoSignificadoRepository impactoSignificadoRepo,
+            RequisitoLegalAsociadoRepository reqLegalAsocRepo, UsuarioRepository usuarioRepo,
+            SectorRepository sectorRepo) {
         this.formularioRepo = formularioRepo;
         this.grillaRepo = grillaRepo;
         this.actividadRepo = actividadRepo;
@@ -60,18 +60,30 @@ public class FormularioService {
         var usuario = usuarioRepo.findById(idUsuario)
                 .orElseThrow(() -> new ResponseStatusException(
                         HttpStatus.NOT_FOUND,
-                        "Usuario no encontrado"
-                ));
+                        "Usuario no encontrado"));
 
         var formulario = new FormularioModel();
         formulario.setUsuario(usuario);
         formulario.setNombreEmpresa(req.nombreEmpresa());
         formulario.setCodigo(req.codigo());
         formulario.setFecha(req.fecha());
+
+        // Guardamos el logo si viene
+        if (req.logoEmpresa() != null && !req.logoEmpresa().isEmpty()) {
+            try {
+                // Decodificamos el Base64 que manda el front a bytes para la BD
+                formulario.setLogoEmpresa(Base64.getDecoder().decode(req.logoEmpresa()));
+            } catch (IllegalArgumentException e) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Logo inválido");
+            }
+        }
+
+        // Guardamos primero para tener el ID
         formularioRepo.save(formulario);
 
         List<GrillaModel> itemsCreados = new ArrayList<>();
 
+        // Si el request trae items, los procesamos
         if (req.items() != null && !req.items().isEmpty()) {
             for (GrillaDto dto : req.items()) {
                 var grilla = crearItemGrilla(formulario, req.idSector(), dto);
@@ -79,22 +91,37 @@ public class FormularioService {
             }
         }
 
-        if (req.logoEmpresa() != null && !req.logoEmpresa().isEmpty()) {
-            try {
-                formulario.setLogoEmpresa(Base64.getDecoder().decode(req.logoEmpresa()));
-            } catch (IllegalArgumentException e) {
-                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Logo inválido");
-            }
+        // Convertimos la lista de modelos a lista de respuestas con TEXTOS
+        List<GrillaResponse> itemsResponse = itemsCreados.stream()
+                .map(this::convertirGrillaAResponse)
+                .collect(Collectors.toList());
+
+        // Armamos el objeto de respuesta final
+        FormularioResponse response = new FormularioResponse();
+        response.setIdFormulario(formulario.getIdFormulario());
+        response.setIdUsuario(usuario.getId());
+        response.setNombreEmpresa(formulario.getNombreEmpresa());
+        response.setCodigo(formulario.getCodigo());
+        response.setFecha(formulario.getFecha());
+        response.setCreadoEn(formulario.getCreadoEn());
+        response.setActualizadoEn(formulario.getActualizadoEn());
+
+        // Devolvemos el logo en Base64 para que el front lo pueda mostrar
+        if (formulario.getLogoEmpresa() != null) {
+            response.setLogoEmpresa(Base64.getEncoder().encodeToString(formulario.getLogoEmpresa()));
         }
 
-        return construirResponseAgrupado(formulario, itemsCreados);
+        // Devolvemos la lista plana
+        response.setItems(itemsResponse);
+
+        return response;
     }
 
     private GrillaModel crearItemGrilla(FormularioModel formulario, Long idSector, GrillaDto dto) {
 
         var grilla = new GrillaModel();
         grilla.setFormulario(formulario);
-        grilla.setIdSector(idSector);
+        grilla.setSector(sectorRepo.getReferenceById(Math.toIntExact(idSector)));
 
         grilla.setActividad(actividadRepo.getReferenceById(Math.toIntExact(dto.idActividad())));
         grilla.setAspectoAmbiental(aspectoRepo.getReferenceById(Math.toIntExact(dto.idAspectoAmbiental())));
@@ -120,74 +147,48 @@ public class FormularioService {
         return grillaRepo.save(grilla);
     }
 
-    private FormularioResponse construirResponseAgrupado(FormularioModel formulario, List<GrillaModel> items) {
-
-        Map<Long, List<GrillaModel>> itemsPorSector = items.stream()
-                .collect(Collectors.groupingBy(GrillaModel::getIdSector));
-
-        List<SectorAgrupado> sectores = itemsPorSector.entrySet().stream()
-                .map(entry -> crearSectorAgrupado(entry.getKey(), entry.getValue()))
-                .sorted(Comparator.comparing(SectorAgrupado::getIdSector))
-                .collect(Collectors.toList());
-
-        FormularioResponse response = new FormularioResponse();
-        response.setIdFormulario(formulario.getIdFormulario());
-        response.setIdUsuario(formulario.getUsuario().getId());
-        response.setNombreEmpresa(formulario.getNombreEmpresa());
-        response.setCodigo(formulario.getCodigo());
-        response.setFecha(formulario.getFecha());
-        response.setCreadoEn(formulario.getCreadoEn());
-        response.setActualizadoEn(formulario.getActualizadoEn());
-        response.setSectores(sectores);
-
-        if (formulario.getLogoEmpresa() != null) {
-            response.setLogoEmpresa(Base64.getEncoder().encodeToString(formulario.getLogoEmpresa()));
-        }
-
-        return response;
-    }
-
-    private SectorAgrupado crearSectorAgrupado(Long idSector, List<GrillaModel> items) {
-
-        var sector = sectorRepo.findById(Math.toIntExact(idSector))
-                .orElseThrow(() -> new ResponseStatusException(
-                        HttpStatus.NOT_FOUND,
-                        "Sector no encontrado: " + idSector
-                ));
-
-        var grillaResponses = items.stream()
-                .map(this::convertirGrillaAResponse)
-                .collect(Collectors.toList());
-
-        return new SectorAgrupado(
-                idSector,
-                sector.getSector(),
-                grillaResponses.size(),
-                grillaResponses
-        );
-    }
-
     private GrillaResponse convertirGrillaAResponse(GrillaModel grilla) {
         return new GrillaResponse(
                 grilla.getIdItem(),
-                Long.valueOf(grilla.getActividad().getIdActividad()),
-                grilla.getActividad().getActividad(),
-                Long.valueOf(grilla.getAspectoAmbiental().getIdAspectoAmbiental()),
+                grilla.getSector().getIdSector(),
+                grilla.getSector().getSector(),
+
+                // Mapeo de Actividad
+                grilla.getActividad().getIdActividad(),
+                grilla.getActividad().getActividad(), // Sacamos el nombre
+
+                // Mapeo de Aspecto
+                grilla.getAspectoAmbiental().getIdAspectoAmbiental(),
                 grilla.getAspectoAmbiental().getAspectoAmbiental(),
-                Long.valueOf(grilla.getImpactoAmbiental().getIdImpactoAmbiental()),
+
+                // Mapeo de Impacto
+                grilla.getImpactoAmbiental().getIdImpactoAmbiental(),
                 grilla.getImpactoAmbiental().getImpactoAmbiental(),
+
+                // Mapeo de Tipo Impacto
+                grilla.getTipoImpacto().getIdTipoImpacto(),
+                grilla.getTipoImpacto().getTipoImpacto(),
+
+                // Mapeo de Condición
+                grilla.getCondicionImpacto().getIdCondicionImpacto(),
+                grilla.getCondicionImpacto().getCondicionImpacto(),
+
                 grilla.getSeveridad(),
                 grilla.getMagnitud(),
                 grilla.getFrecuencia(),
                 grilla.getReversibilidad(),
                 grilla.getValoracion(),
-                grilla.getImpactoSignificado().getImpactoSignificado(),
-                grilla.getRequisitoLegalAsociado().getRequisitoLegalAsociado(),
-                grilla.getControl(),
-                grilla.getObservaciones()
-        );
-    }
 
+                // Significancia (Puede ser nulo si no se calculó, usamos protección)
+                grilla.getImpactoSignificado() != null ? grilla.getImpactoSignificado().getImpactoSignificado() : "",
+
+                // Requisito Legal
+                grilla.getRequisitoLegalAsociado().getIdRequisitoLegalAsociado(),
+                grilla.getRequisitoLegalAsociado().getRequisitoLegalAsociado(),
+
+                grilla.getControl(),
+                grilla.getObservaciones());
+    }
 
     @Transactional
     public FormularioDto actualizarPorEmail(Long idFormulario, FormularioModel f, String emailUsuario) {
@@ -210,14 +211,15 @@ public class FormularioService {
         formularioRepo.delete(db);
     }
 
-    public FormularioModel obtener(Long idFormulario, String email) {
-        return mustBeMine(idFormulario, email);
+    public FormularioResponse obtener(Long idFormulario, String email) {
+        FormularioModel formulario = mustBeMine(idFormulario, email);
+        return convertirFormularioAResponse(formulario);
     }
 
-    public List<FormularioDto> listar(String email) {
+    public List<FormularioResponse> listar(String email) {
         return formularioRepo.findByUsuario_Email(email).stream()
-                .map(FormularioDto::of)
-                .toList();
+                .map(this::convertirFormularioAResponse)
+                .collect(Collectors.toList());
     }
 
     public List<GrillaModel> listarItems(Long idFormulario, String email, Long sector) {
@@ -226,5 +228,35 @@ public class FormularioService {
             return grillaRepo.findByFormulario_IdFormularioAndIdSector(idFormulario, sector);
         }
         return grillaRepo.findByFormulario_IdFormulario(idFormulario);
+    }
+
+    private FormularioResponse convertirFormularioAResponse(FormularioModel formulario) {
+        FormularioResponse response = new FormularioResponse();
+
+        // Datos básicos
+        response.setIdFormulario(formulario.getIdFormulario());
+        response.setIdUsuario(formulario.getUsuario().getId());
+        response.setNombreEmpresa(formulario.getNombreEmpresa());
+        response.setCodigo(formulario.getCodigo());
+        response.setFecha(formulario.getFecha());
+        response.setCreadoEn(formulario.getCreadoEn());
+        response.setActualizadoEn(formulario.getActualizadoEn());
+
+        // Logo (Si existe)
+        if (formulario.getLogoEmpresa() != null) {
+            response.setLogoEmpresa(Base64.getEncoder().encodeToString(formulario.getLogoEmpresa()));
+        }
+
+        // Items de la Grilla
+        List<GrillaResponse> itemsResponse = grillaRepo
+                .findByFormulario_IdFormulario(formulario.getIdFormulario()) != null
+                        ? grillaRepo.findByFormulario_IdFormulario(formulario.getIdFormulario()).stream()
+                                .map(this::convertirGrillaAResponse)
+                                .collect(Collectors.toList())
+                        : new ArrayList<>();
+
+        response.setItems(itemsResponse);
+
+        return response;
     }
 }
